--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,3 +39,29 @@ services:
       - ./data/2_kafka_posts/data:/var/lib/kafka/data
     depends_on:
       - zookeeper
+
+  3_python_proclenguaje:
+    build: ./
+    depends_on:
+      - 4_kafka_proclenguaje
+    command: python 3_python_proclenguaje.py
+    restart: on-failure
+
+  4_kafka_proclenguaje:
+    image: confluentinc/cp-kafka:5.3.0
+    hostname: 4_kafka_proclenguaje
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://4_kafka_proclenguaje:19092,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092
+      KAFKA_ADVERTISED_HOST_NAME: 4_kafka_proclenguaje
+      KAFKA_CREATE_TOPICS: "proclenguaje:1:1"
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
+      KAFKA_BROKER_ID: 2
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    volumes:
+      - ./data/4_kafka_proclenguaje/data:/var/lib/kafka/data
+    depends_on:
+      - zookeeper
